respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Shipment_Service_Line_Disbursement__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Allocated_Service_Line_Currency__c</fullName>
        <formula>Amount__c *  Conversion_Rate_to_Service_Line_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Allocated (Service Line Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount Allocated</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buy_Amount__c</fullName>
        <formula>Shipment_Service_Line__r.Std_Buy_Amount__c</formula>
        <label>Buy Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_to_Service_Line_Currency__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Conversion Rate to Service Line Currency</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disbursement_Concept__c</fullName>
        <formula>Shipment_Disbursement__r.Disbursment_Concept__c</formula>
        <label>Disbursement Concept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_Exc__c</fullName>
        <formula>Shipment_Disbursement__r.Invoice_Amount_Exc__c</formula>
        <label>Invoice Amount (Exc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <formula>Shipment_Disbursement__r.Invoice_Date__c</formula>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <formula>Shipment_Service_Line__r.Outstanding_Balance__c</formula>
        <label>Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <formula>Shipment_Disbursement__r.Payment_Amount__c</formula>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <formula>Shipment_Disbursement__r.Payment_Date__c</formula>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Ref__c</fullName>
        <formula>Shipment_Disbursement__r.Payment_Ref__c</formula>
        <label>Payment Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Category__c</fullName>
        <formula>Shipment_Service_Line__r.Service_Rate_Category__c</formula>
        <label>Rate Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Name__c</fullName>
        <formula>Shipment_Service_Line__r.Service_Rate_Name__r.Name</formula>
        <label>Rate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <formula>Shipment_Service_Line__r.Rate_Type__c</formula>
        <label>Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Buy_Price__c</fullName>
        <formula>Shipment_Service_Line__r.Shipment_Buy_Price__c</formula>
        <label>Shipment Buy Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipment_Disbursement__c</fullName>
        <description>master-detail specifying disbursement reference number where service line will be included. filled in automatically</description>
        <label>Shipment Disbursement</label>
        <referenceTo>Shipment_Disbursement__c</referenceTo>
        <relationshipLabel>Shipment Service Lines / Disbursements</relationshipLabel>
        <relationshipName>Shipment_Service_Lines_Disbursements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shipment_Service_Line__c</fullName>
        <description>master-detail specifying service line reference number to be included in disbursement</description>
        <label>Shipment Service Line</label>
        <referenceTo>Shipment_Fee_Line__c</referenceTo>
        <relationshipLabel>Shipment Service Lines / Disbursements</relationshipLabel>
        <relationshipName>Shipment_Service_Lines_Disbursements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Supplier_Account__c</fullName>
        <formula>Shipment_Disbursement__r.Account__r.Name</formula>
        <label>Supplier Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Invoice_Ref__c</fullName>
        <formula>Shipment_Disbursement__r.Invoice_Ref__c</formula>
        <label>Supplier Invoice Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <formula>Shipment_Service_Line__r.Units__c</formula>
        <label>Units</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Shipment Service Line / Disbursement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shipment Service Line / Disbursement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Service Lines / Disbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>